--- a/cyberpunk.css.html
+++ b/cyberpunk.css.html
@@ -4,47 +4,70 @@
   <style>
   /*frame*/
 /*template zone*/
-body.cyberpunk{
- margin-top:4rem;
- margin-bottom:4rem;
- margin-right:2+25rem;
- margin-left:auto;
- width:43rem;
- direction:rtl;
+body.cyberpunk {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+  margin-right: 27rem;
+  margin-left: auto;
+  width: 43rem;
+  direction: rtl;
 }
-body.cyberpunk *{direction:ltr}
-nav,header,footer{
- position:fixed;
- top:0;
- right:0;
- width:25rem; 
- padding-left:2rem; 
+
+body.cyberpunk * {
+  direction: ltr;
 }
-nav{
- padding-top:4rem;
- padding-bottom:4rem;
- height:100vh;
- //z-index:1;
- overflow-y:auto; 
+
+nav, header, footer {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 25rem;
+  padding-left: 2rem;
 }
-header,footer{
- height:4rem;
- z-index:2;
- overflow:hidden;  
+
+nav {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  height: 100vh;
+  overflow-y: auto;
 }
-footer{
- top:unset;
- bottom:0;
+
+header, footer {
+  height: 4rem;
+  z-index: 2;
+  overflow: hidden;
 }
-.wrap{
- /*imitation*/
+
+footer {
+  top: unset;
+  bottom: 0;
 }
+
+.wrap {
+  /*imitation*/
+}
+
 /*customize the under*/
-.pink{background-color:pink}
-.blue{background-color:blue}
-.orange{background-color:orange}
-.brown{background-color:brown}
-.test2{height:400vh;}  
+.pink {
+  background-color: pink;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.orange {
+  background-color: orange;
+}
+
+.brown {
+  background-color: brown;
+}
+
+.test2 {
+  height: 400vh;
+}
+    
   </style>
 </head>
 <body class="cyberpunk">
