--- a/cyberpunk.css.html
+++ b/cyberpunk.css.html
@@ -1,4 +1,5 @@
-
+<!doctype html>
+<html lang="en">
 <head>
   <link rel="stylesheet" href="https://gnjo.github.io/CyPk/cyberpunk.css?v=2&g=0"/>
   <style>
@@ -84,3 +85,5 @@ footer {
     <div class="wrap">dddd</div>
   </footer>
 </body>
+</html>
+  
