--- a/CyPk.html
+++ b/CyPk.html
@@ -9,7 +9,7 @@ https://gnjo.github.io/e.js?v=1
 https://gnjo.github.io/use.js?v=3
 https://gnjo.github.io/togist.js?v=1
 https://gnjo.github.io/keyCmd.js
-https://gnjo.github.io/CyPk/mo.js
+https://gnjo.github.io/mo.js
 https://gnjo.github.io/CyPk/plainList.js?v=8
 https://gnjo.github.io/filter.js?v=2
 https://gnjo.github.io/imgc.js
@@ -18,6 +18,6 @@ https://gnjo.github.io/CyPk/dropandpop.js?v=1
 https://gnjo.github.io/CyPk/CyPk.js?v=069&g=2
 
 </script>
-<script src="https://gnjo.github.io/CyPk/loader.js" onload="loader({chunk:true})"></script>
+<script src="https://gnjo.github.io/loader.js" onload="loader({chunk:true})"></script>
  
 </body>
