--- a/terminal.html
+++ b/terminal.html
@@ -1,3 +1,6 @@
+<head>
+<link rel="icon" type="image/x-icon" href="https://gnjo.github.io/CyPk/favicon.ico"> 
+</head>
 <body style="background:black">
  <script type="text/plain" data-loader>
 https://codepen.io/gnjo/pen/MRRLPq.css?terminal=1  
