--- a/wordnetWorker.demo.html
+++ b/wordnetWorker.demo.html
@@ -8,8 +8,8 @@
 let w =new Worker('wordnetWorker.js')
 ,wn=fn.q('.wn')
 ,ret=fn.q('.ret')
-,c=()=>{w.postMessage(fn.gsl())}
-w.onMessage=(e)=>{ ret.textContent=e.data.join('/') }
+,c=()=>{console.log('hit');w.postMessage(fn.gsl())}
+w.onMessage=(e)=>{console.log('onMessage'); ret.textContent=e.data.join('/') }
 keyCmd(document.body)
  .ctrl({/*space*/32:c})
  .end('start')
